--- a/style.css
+++ b/style.css
@@ -20,23 +20,22 @@ body {
 .Headline {
   display: flex;
   flex-direction: column;
+  background-image: url(assets/header-shapes\ mobile@2x.svg);
+  background-size: cover;
   padding: 114px 24px;
   width: 327px;
   height: 150px;
-  gap: 12px;
-}
-
-.background {
-  position: absolute;
-  z-index: -1;
-  background-size: cover;
-  background-position: center;
+  gap: 0;
 }
 
 .PrimaryText {
   font-size: 40px;
   font-weight: 700;
   line-height: 52px;
+  letter-spacing: 2px;
+  word-spacing: 3px;
+  text-align: left;
+  color: #172b4d;
 }
 
 .PrimaryText2 {
