--- a/style.css
+++ b/style.css
@@ -22,9 +22,11 @@ body {
   flex-direction: column;
   background-image: url(assets/header-shapes\ mobile@2x.svg);
   background-size: cover;
+  background-color: white;
   padding: 114px 24px;
+  position: relative;
   width: 327px;
-  height: 150px;
+  height: 450px;
   gap: 0;
 }
 
@@ -49,4 +51,103 @@ body {
   font-size: 16px;
   font-weight: 500;
   line-height: 24px;
+}
+
+.work-section {
+  display: grid;
+  grid-template-rows: 1fr 1fr 1fr 1fr;
+  row-gap: 88px;
+  padding: 80px 0;
+  align-items: center;
+  justify-content: flex-start;
+  background-color: #f5f6fa;
+}
+
+.card {
+  background: var(--neutrals-n-0, #fff);
+  border-radius: 16px;
+  border-style: solid;
+  border-color: var(--neutrals-n-40, #dfe1e6);
+  border-width: 1px;
+  padding: 16px;
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+  align-items: center;
+  justify-content: flex-start;
+  flex-shrink: 0;
+  position: relative;
+}
+
+.languages {
+  margin-left: 30px;
+  display: flex;
+  justify-content: start;
+  gap: 8px;
+}
+
+.languages span {
+  background-color: #dee1ff;
+  padding: 5px 15px;
+  border-radius: 8px;
+  color: #6070ff;
+}
+
+.card-image {
+  border-radius: 8px;
+  flex-shrink: 0;
+  width: 295px;
+  height: 220px;
+  position: relative;
+}
+
+.seeProject {
+  width: fit-content;
+  margin: 20px 30px;
+  padding: 10px 20px;
+  border: solid #616fe7 1px;
+  border-style: solid;
+  border-width: 1px;
+  border-radius: 8px;
+  color: #152bf5;
+  font-size: 17px;
+  font-style: normal;
+  font-weight: 500;
+}
+
+.cardTitle h2 {
+  color: #172b4d;
+  margin-left: 30px;
+  font-size: 32px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 44px;
+}
+
+.cardContent p {
+  margin-left: 30px;
+  font-size: 15px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px;
+}
+
+.details {
+  margin-left: 30px;
+  display: flex;
+  gap: 10px;
+  color: #344563;
+  padding-top: 10px;
+}
+
+.details span {
+  color: #344563;
+}
+
+.canopy {
+  color: var(--neutrals-n-600, #344563);
+  margin-top: 2px;
+  font-size: 15px;
+  font-style: normal;
+  font-weight: 600;
 }
