--- a/style.css
+++ b/style.css
@@ -194,3 +194,98 @@ body {
 .about {
   margin-bottom: 10px;
 }
+
+.lang-div {
+  margin: 30px 10px;
+  background-color: #f7f7f9;
+  border-radius: 0.6rem;
+  padding: 1rem 1.625rem 1rem 0.75rem;
+  display: flex;
+  align-items: center;
+  gap: 0;
+}
+
+.contact_form_container {
+  position: relative;
+  width: 375px;
+  height: 779px;
+  margin-top: 700px;
+  background-image: url(assets/contact-me.svg);
+  background-size: cover;
+  margin-bottom: 200px;
+}
+
+.contact_form_container img {
+  position: absolute;
+  margin-top: 1.8rem;
+  height: 779px;
+  right: 0;
+}
+
+.container_content {
+  display: flex;
+  padding: 20px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+.container_content h1 {
+  margin-top: 6rem;
+  color: white;
+  font-size: 2.5rem;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 3.25rem;
+}
+
+.container_content p {
+  color: white;
+  margin-top: 1rem;
+  font-size: 1.25rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.75rem;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+}
+
+form input {
+  width: 20.4375rem;
+  height: 3rem;
+  flex-shrink: 0;
+  padding-left: 0.7rem;
+  border-radius: 0.6rem;
+  border: none;
+}
+
+form textarea {
+  width: 19.3rem;
+  height: 10.625rem;
+  flex-shrink: 0;
+  z-index: 1;
+  padding: 1rem 1rem;
+  color: black;
+  border-radius: 0.6rem;
+  border: none;
+}
+
+.form-button {
+  width: 142px;
+  height: 48px;
+  padding: 12px 16px;
+  border-radius: 8px;
+  background-color: #FFF;
+  font-size: 17px;
+  font-weight: 500;
+  line-height: 24px;
+  letter-spacing: 0.03em;
+  text-align: center;
+  color: #6070FF;
+  margin-left: 18px;
+}
