--- a/style.css
+++ b/style.css
@@ -22,44 +22,40 @@ body {
   flex-direction: column;
   background-image: url(assets/header-shapes\ mobile@2x.svg);
   background-size: cover;
+  background-position: center;
   background-color: white;
   padding: 114px 24px;
-  position: relative;
-  width: 327px;
-  height: 450px;
-  gap: 0;
+  gap: 12px;
 }
 
 .PrimaryText {
   font-size: 40px;
-  font-weight: 700;
-  line-height: 52px;
-  letter-spacing: 2px;
-  word-spacing: 3px;
-  text-align: left;
+  font-weight: 800;
+  margin: 0;
   color: #172b4d;
 }
 
 .PrimaryText2 {
   font-size: 16px;
   font-weight: 400;
-  line-height: 24px;
+  margin: 0;
 }
 
 .connect {
   color: #7f8cff;
   font-size: 16px;
-  font-weight: 500;
+  font-weight: 600;
   line-height: 24px;
+  margin: 0;
 }
 
 .work-section {
   display: grid;
   grid-template-rows: 1fr 1fr 1fr 1fr;
   row-gap: 88px;
-  padding: 80px 0;
+  padding: 114px 24px;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: center;
   background-color: #f5f6fa;
 }
 
@@ -73,14 +69,11 @@ body {
   display: flex;
   flex-direction: column;
   gap: 12px;
-  align-items: center;
-  justify-content: flex-start;
-  flex-shrink: 0;
-  position: relative;
+  /* align-items: center;
+  justify-content: flex-start; */
 }
 
 .languages {
-  margin-left: 30px;
   display: flex;
   justify-content: start;
   gap: 8px;
@@ -93,17 +86,9 @@ body {
   color: #6070ff;
 }
 
-.card-image {
-  border-radius: 8px;
-  flex-shrink: 0;
-  width: 295px;
-  height: 220px;
-  position: relative;
-}
-
 .seeProject {
   width: fit-content;
-  margin: 20px 30px;
+  margin: 20px 0;
   padding: 10px 20px;
   border: solid #616fe7 1px;
   border-style: solid;
@@ -117,7 +102,6 @@ body {
 
 .cardTitle h2 {
   color: #172b4d;
-  margin-left: 30px;
   font-size: 32px;
   font-style: normal;
   font-weight: 700;
@@ -125,7 +109,6 @@ body {
 }
 
 .cardContent p {
-  margin-left: 30px;
   font-size: 15px;
   font-style: normal;
   font-weight: 400;
@@ -133,7 +116,6 @@ body {
 }
 
 .details {
-  margin-left: 30px;
   display: flex;
   gap: 10px;
   color: #344563;
@@ -157,15 +139,11 @@ body {
   flex-direction: column;
   background-color: white;
   padding: 114px 24px;
-  position: relative;
-  width: 327px;
-  height: 450px;
-  gap: 0;
+  gap: 12px;
 }
 
 .seeresume {
   width: fit-content;
-  margin: 20px 5px;
   padding: 10px 18px;
   border: solid #616fe7 1px;
   border-style: solid;
@@ -177,115 +155,55 @@ body {
   font-weight: 500;
 }
 
+h1 {
+  font-size: 17px;
+}
+
 .greaterthan {
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 
-.greaterthan h1 {
-  color: black;
-  width: 327px;
-}
-
-.greaterthan img {
-  margin-top: 25px;
+.right {
+  rotate: -90deg;
 }
 
 .about {
   margin-bottom: 10px;
 }
 
+.social {
+  width: 170px;
+}
+
 .lang-div {
-  margin: 30px 10px;
+  margin: 10px;
   background-color: #f7f7f9;
   border-radius: 0.6rem;
   padding: 1rem 1.625rem 1rem 0.75rem;
   display: flex;
   align-items: center;
-  gap: 0;
+  gap: 8px;
 }
 
-.contact_form_container {
-  position: relative;
-  width: 375px;
-  height: 779px;
-  margin-top: 700px;
-  background-image: url(assets/contact-me.svg);
-  background-size: cover;
-  margin-bottom: 200px;
-}
-
-.contact_form_container img {
-  position: absolute;
-  margin-top: 1.8rem;
-  height: 779px;
-  right: 0;
-}
-
-.container_content {
+.contact-form {
   display: flex;
-  padding: 20px;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  padding: 114px 24px;
+  background-color: #152bf5;
+  border-radius: 100px 0;
+  background-image: url('./assets/contactmobile.png');
+}
+
+.form-title {
+  font-size: 40px;
+  color: #fff;
   text-align: center;
 }
 
-.container_content h1 {
-  margin-top: 6rem;
-  color: white;
-  font-size: 2.5rem;
-  font-style: normal;
-  font-weight: 700;
-  line-height: 3.25rem;
-}
-
-.container_content p {
-  color: white;
-  margin-top: 1rem;
-  font-size: 1.25rem;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 1.75rem;
-}
-
-form {
-  display: flex;
-  flex-direction: column;
-  gap: 1.5rem;
-}
-
-form input {
-  width: 20.4375rem;
-  height: 3rem;
-  flex-shrink: 0;
-  padding-left: 0.7rem;
-  border-radius: 0.6rem;
-  border: none;
-}
-
-form textarea {
-  width: 19.3rem;
-  height: 10.625rem;
-  flex-shrink: 0;
-  z-index: 1;
-  padding: 1rem 1rem;
-  color: black;
-  border-radius: 0.6rem;
-  border: none;
-}
-
-.form-button {
-  width: 142px;
-  height: 48px;
-  padding: 12px 16px;
-  border-radius: 8px;
-  background-color: #FFF;
-  font-size: 17px;
-  font-weight: 500;
-  line-height: 24px;
-  letter-spacing: 0.03em;
+.form-dis {
+  font-size: 20px;
+  color: #ebebff;
   text-align: center;
-  color: #6070FF;
-  margin-left: 18px;
 }
