--- a/style.css
+++ b/style.css
@@ -191,9 +191,35 @@ h1 {
   display: flex;
   flex-direction: column;
   padding: 114px 24px;
-  background-color: #152bf5;
-  border-radius: 100px 0;
-  background-image: url('./assets/contactmobile.png');
+  gap: 25px;
+  background-color: #6070ff;
+  border-top-left-radius: 100px;
+  background-image: url('./assets/contact\ form\ shapes-mobile@2x.png');
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position-x: 70px;
+  background-position-y: 10px;
+}
+
+.contact-form input {
+  height: 35px;
+  border-radius: 8px;
+  padding: 5px 10px;
+  border: none;
+}
+
+.contact-form textarea {
+  height: 150px;
+  border-radius: 8px;
+  padding: 5px 10px;
+}
+
+.contact-form button {
+  border-radius: 8px;
+  padding: 12px 16px;
+  border: 1px solid;
+  color: #6070ff;
+  margin-top: 20px;
 }
 
 .form-title {
