--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
   }
 
   .navbar {
-    display: inline-flex;
+    display: flex;
     padding: 1rem 8.9375rem;
     align-items: center;
     gap: 49.75rem;
@@ -25,6 +25,10 @@ body {
     justify-content: center;
     align-items: flex-start;
     flex-direction: column;
+  }
+
+  .Headline::before {
+    position: absolute;
   }
 
   .PrimaryText,
@@ -191,8 +195,6 @@ body {
     background-image: url("assets/desktop-img/contact\ form\ background\ shapes.png");
     background-repeat: no-repeat;
     background-size: contain;
-    /* background-position-x: 70px;
-    background-position-y: 10px; */
     align-items: center;
     width: unset;
   }
@@ -339,11 +341,12 @@ body {
   }
 }
 
-@media (max-width: 375px) {
+@media (max-width: 768px) {
   body {
     margin: 0;
     padding: 0;
     font-family: Poppins, sans-serif;
+    min-width: 375px;
   }
 
   .navbar {
