--- a/style.css
+++ b/style.css
@@ -73,7 +73,8 @@ body {
     font-size: 1.125rem;
     font-style: normal;
     font-weight: 700;
-    line-height: 1.25rem; /* 111.111% */
+    line-height: 1.25rem;
+    /* 111.111% */
   }
 
   li {
@@ -239,7 +240,7 @@ body {
     line-height: 3.25rem;
   }
 
-  .About > h1 {
+  .About>h1 {
     color: var(--theme-1-neutrals-1, #091e42);
     font-size: 2.5rem;
     font-style: normal;
@@ -247,7 +248,7 @@ body {
     line-height: 3.25rem;
   }
 
-  .About > p {
+  .About>p {
     color: var(--neutrals-n-600, #344563);
     font-size: 1rem;
     font-style: normal;
@@ -357,6 +358,13 @@ body {
     display: none;
   }
 
+  .list-item {
+    padding: 15px;
+    text-align: center;
+    color: #fff;
+    transition: background-color 0.3s;
+  }
+
   .logo {
     color: #6070ff;
     font-size: 18px;
@@ -387,7 +395,7 @@ body {
     margin: 0;
   }
 
-  .card > img {
+  .card>img {
     width: 295px;
     height: 220px;
   }
